chore(release): upgrade semantic-release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,4 @@
 {
   "verifyConditions": ["@semantic-release/changelog", "@semantic-release/npm", "@semantic-release/git", "@semantic-release/github"],
-  "publish": ["@semantic-release/changelog", "@semantic-release/npm", "@semantic-release/git", "@semantic-release/github"]
+  "prepare": ["@semantic-release/changelog", "@semantic-release/npm", "@semantic-release/git"]
 }
