feat(*): add a `ef-locale` binary
The binary can provide locale data from various provider plugins. The various plugins can scrape the data from the web, but always provide it in a standardized format. It can then generate output in various ways.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,11 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "dist/lib",
+    "outDir": "dist",
     "baseUrl": ".",
     "paths": {
+      "@bin/*": ["bin/*"],
+      "@lib": ["lib/index"],
       "@lib/*": ["lib/*"],
       "@locale/*": ["lib/locale/*"]
     },
@@ -29,6 +31,7 @@
     ]
   },
   "include": [
+    "bin/**/*",
     "lib/**/*"
   ],
   "exclude": [
