--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/lib/index.umd.js",
   "module": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
+  "bin": {
+    "ef-locale": "dist/bin/ef-locale"
+  },
   "repository": "https://github.com/ef-carbon/locale.git",
   "license": "MIT",
   "engines": {
@@ -16,9 +19,14 @@
     "distclean": "git clean -Xfd",
     "clean": "git clean -Xfde node_modules",
     "build": "yarn -s build:ts",
-    "postbuild": "ef-tspm -s && yarn -s build:rollup",
+    "postbuild": "ef-tspm -s && yarn -s build:rollup && yarn -s build:clime:patch",
     "build:ts": "tsc",
-    "build:rollup": "rollup -c rollup.config.js",
+    "build:rollup": "yarn -s build:rollup:library && yarn -s build:rollup:binary",
+    "build:rollup:module": "rollup -c rollup.cjs.config.js --environment",
+    "build:rollup:modules": "foreach -g 'dist/bin/+(command|provider|generator)/**/*.js' -x 'yarn -s build:rollup:module NAME:#{name},RELDIR:#{reldir}'",
+    "build:rollup:binary": "rollup -c rollup.binary.config.js && yarn -s build:rollup:modules",
+    "build:rollup:library": "rollup -c rollup.library.config.js",
+    "build:clime:patch": "rename -f dist/bin/command/default.js dist/bin/command/default.mjs && rename -f dist/bin/command/default.cjs dist/bin/command/default.js",
     "format": "yarn -s lint:format:fix",
     "lint": "yarn -s lint:ts && yarn -s lint:format && yarn -s lint:commit && yarn -s lint:ci",
     "lint:fix": "yarn -s lint:ts:fix && yarn -s lint:format:fix",
@@ -35,7 +43,8 @@
     "ci": "yarn -s build && yarn -s lint && yarn -s test && yarn -s docs",
     "fix": "yarn -s lint:fix",
     "docs": "yarn -s typedoc lib",
-    "docs:open": "yarn -s opn dist/docs/index.html"
+    "docs:open": "yarn -s opn dist/docs/index.html",
+    "generate": "yarn -s build && ./dist/bin/ef-locale --generator ./dist/bin/generator/typescript.cjs lib"
   },
   "husky": {
     "hooks": {
@@ -54,15 +63,20 @@
     "@ef-carbon/tspm": "^2.0.1",
     "@semantic-release/changelog": "^2.0.0",
     "@semantic-release/git": "^4.0.0",
+    "@types/diacritics": "^1.3.1",
     "@types/jest": "^22.1.1",
+    "@types/node-fetch": "^1.6.7",
     "codecov": "^3.0.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
+    "foreach-cli": "^1.7.2",
     "husky": "^0.15.0-rc.3",
     "jest": "^22.1.4",
     "jest-junit-reporter": "^1.1.0",
     "opn-cli": "^3.1.0",
+    "rename-cli": "^5.0.0",
     "rollup": "^0.57.0",
+    "rollup-plugin-replace": "^2.0.0",
     "semantic-release": "^15.0.0",
     "ts-jest": "^22.0.2",
     "tslint": "^5.9.1",
@@ -94,9 +108,17 @@
     ],
     "testEnvironment": "node",
     "moduleNameMapper": {
+      "^@bin(.*)$": "<rootDir>/bin$1",
       "^@test(.*)$": "<rootDir>/test$1",
       "^@lib(.*)$": "<rootDir>/lib$1",
       "^@locale(.*)$": "<rootDir>/lib/locale$1"
     }
+  },
+  "dependencies": {
+    "clime": "^0.5.9",
+    "diacritics": "^1.3.0",
+    "extendable-error": "^0.1.5",
+    "node-fetch": "^2.1.1",
+    "word-wrap": "^1.2.3"
   }
 }
