chore(*): remove docs media directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,6 @@
     "hideGenerator": true,
     "excludePrivate": true,
     "logger": "none",
-    "exclude": "**/*.test.ts",
-    "media": "media"
+    "exclude": "**/*.test.ts"
   }
 }
