--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,6 +206,9 @@ jobs:
       - run:
           name: Documentation
           command: yarn docs
+      - run:
+          name: Jekyll Suppression
+          command: touch dist/docs/.nojekyll
       - <<: *setup_git
       - run:
           name: Upload
