--- a/package.json
+++ b/package.json
@@ -67,30 +67,30 @@
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
-    "@ef-carbon/tspm": "^2.2.1",
-    "@semantic-release/changelog": "^2.0.2",
-    "@semantic-release/git": "^5.0.0",
+    "@ef-carbon/tspm": "^2.2.2",
+    "@semantic-release/changelog": "^2.1.1",
+    "@semantic-release/git": "5.0.0",
     "@types/diacritics": "^1.3.1",
-    "@types/jest": "^23.0.0",
+    "@types/jest": "^23.1.5",
     "@types/node-fetch": "^2.1.1",
-    "codecov": "^3.0.2",
+    "codecov": "^3.0.4",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "foreach-cli": "^1.8.0",
-    "husky": "^1.0.0-rc.8",
-    "jest": "^23.1.0",
+    "husky": "^1.0.0-rc.13",
+    "jest": "^23.4.0",
     "jest-junit-reporter": "^1.1.0",
     "opn-cli": "^3.1.0",
-    "rename-cli": "^5.1.1",
-    "rollup": "^0.60.0",
+    "rename-cli": "^5.1.2",
+    "rollup": "^0.62.0",
     "rollup-plugin-replace": "^2.0.0",
-    "semantic-release": "^15.5.0",
-    "ts-jest": "^22.4.6",
+    "semantic-release": "^15.7.1",
+    "ts-jest": "^22",
     "tslint": "^5.10.0",
     "typedoc": "^0.11.1",
-    "typescript": "^2.9.1",
+    "typescript": "^2.9.2",
     "typescript-formatter": "^7.2.2",
-    "yaml-lint": "^1.2.3"
+    "yaml-lint": "^1.2.4"
   },
   "config": {
     "commitizen": {
