ci(circle): add context to release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,6 +245,7 @@ workflows:
           requires:
             - test
       - release:
+          context: release
           requires:
             - test
           filters:
